Added translation in html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,14 +1,30 @@
-products = Продукты
+products=Продукты
 sign_up=Зарегистрироваться
 sign_in=Войти
 profile=Профиль
 my_cart=Моя корзина
 log_out=Выйти
-by_name = По имени
-by_price = По цене
-by_category = По категориям
-by_description = По описанию
-search = Поиск
-title = Интернет-магазин компьютерной техники
-list.name = Ноутбук
-list.description = Для учебы
+by_name=По имени
+by_price=По цене
+by_category=По категориям
+by_description=По описанию
+search=Поиск
+title=Интернет-магазин компьютерной техники
+in_cart=В корзину
+reviews=Отзывы
+error_reviews=Чтобы написать отзыв нужно сначала оформить заказ
+give_feedback=Оставить отзыв
+your_credentials=Ваши учетные данные
+your_name=Ваше имя
+your_email=Ваш емеил
+your_phone=Ваш номер телефона
+your_address=Ваш адрес
+go_to_products=Перейдите к продуктам
+registration=Регистрация
+name=имя
+email=емеил
+password=пароль
+phone=номер телефона
+address=адрес
+is_already_exists=уже существует
+input_data_with_errors=Входные данные с ошибками
