--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,14 +1,31 @@
-products = Products
-sign_up = Sign up
+products=Products
+sign_up=Sign up
 sign_in=Sign in
 profile=Profile
 my_cart=My cart
 log_out=Log out
-by_name = By name
-by_price = By price
-by_category = By category
-by_description = By description
-search = Search
-title = Online store of computer equipment
-list.name = Laptop
-list.description = For study
+by_name=By name
+by_price=By price
+by_category=By category
+by_description=By description
+search=Search
+title=Online store of computer equipment
+in_cart=In cart
+reviews=Reviews
+error_reviews=To write a review, you must first place an order
+message=Message
+give_feedback=Give feedback
+your_credentials=Your credentials
+your_name=Your name
+your_email=Your email
+your_phone=Your phone
+your_address=Your address
+go_to_products=Go to products
+registration=Registration
+name=name
+email=email
+password=password
+phone=phone
+address=address
+is_already_exists = is already exists
+input_data_with_errors=Input data with errors
