--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,10 +22,31 @@ your_phone=Your phone
 your_address=Your address
 go_to_products=Go to products
 registration=Registration
-name=name
+name=Name
 email=email
 password=password
 phone=phone
 address=address
-is_already_exists = is already exists
+is_already_exists=is already exists
 input_data_with_errors=Input data with errors
+enter_restore_password=Enter password recovery information
+enter_email=Enter email
+get=Get
+link_to_your_new_password=Link to your new password
+price=Price
+quantity=Quantity
+action=Action
+delete=Delete
+totals=Totals
+total_sum=TotalSum
+checkout=Checkout
+invalid_username_or_password=Invalid username or password
+login=Login
+not_registered=Not registered
+create_an_account=Create an account
+forgot_password=Forgot password
+restore_password=Restore password
+your_new_password=Your new password
+go_to_login=Go to login
+turned_out=turned out to be harder than we thought
+please_leave_review=Please leave a review for purchased items.
