--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,3 +1,4 @@
+products=Продукты
 sign_up=Зарегистрироваться
 sign_in=Войти
 profile=Профиль
@@ -21,10 +22,31 @@ your_phone=Ваш номер телефона
 your_address=Ваш адрес
 go_to_products=Перейдите к продуктам
 registration=Регистрация
-name=имя
+name=Имя
 email=емеил
 password=пароль
 phone=номер телефона
 address=адрес
-is_already_exists = уже существует
+is_already_exists=уже существует
 input_data_with_errors=Входные данные с ошибками
+enter_restore_password=Введите данные для восстановления пароля
+enter_email=Введите емеил
+get=Получить
+link_to_your_new_password=Ссылка на ваш новый пароль
+price=Цена
+quantity=Количество
+action=Действие
+delete=Удалить
+totals=Итоги
+total_sum = Итоговая сумма
+checkout=Оформить заказ
+invalid_username_or_password=Неверный эмеил пользователя или пароль
+login=Авторизоваться
+not_registered=Не зарегистрирован
+create_an_account=Создать учетную запись
+forgot_password = Забыл пароль
+restore_password= Восстановить пароль
+your_new_password=Ваш новый пароль
+go_to_login=Перейти на логин
+turned_out=оказался сложнее, чем мы думали
+please_leave_review=Пожалуйста оставьте отзыв к купленным товарам
