Update translation in properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,7 +48,8 @@ forgot_password = Забыл пароль
 restore_password= Восстановить пароль
 your_new_password=Ваш новый пароль
 go_to_login=Перейти на логин
-turned_out=оказался сложнее, чем мы думали
+turned_out=Оказался сложнее, чем мы думали
 please_leave_review=Пожалуйста оставьте отзыв к купленным товарам
+update=Обновить
 
 
