--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,3 +50,4 @@ your_new_password=Your new password
 go_to_login=Go to login
 turned_out=turned out to be harder than we thought
 please_leave_review=Please leave a review for purchased items.
+update=Update
