--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -50,3 +50,4 @@ your_new_password=Ваш новый пароль
 go_to_login=Перейти на логин
 turned_out=оказался сложнее, чем мы думали
 please_leave_review=Пожалуйста оставьте отзыв к купленным товарам
+update=Обновить
