Added quantity of goods

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -51,5 +51,6 @@ go_to_login=Перейти на логин
 turned_out=Оказался сложнее, чем мы думали
 please_leave_review=Пожалуйста оставьте отзыв к купленным товарам
 update=Обновить
+choose=Выбор
 
 
