--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -51,3 +51,4 @@ go_to_login=Go to login
 turned_out=turned out to be harder than we thought
 please_leave_review=Please leave a review for purchased items.
 update=Update
+choose=Choose
