--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -51,3 +51,4 @@ go_to_login=Перейти на логин
 turned_out=оказался сложнее, чем мы думали
 please_leave_review=Пожалуйста оставьте отзыв к купленным товарам
 update=Обновить
+choose=Выбор
